# ram-audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.ru.md  generate_ram_audio.py  idea.md  plan.md  real_ram_audio.py
release-assets/: SHA256SUMS.txt
scripts/: build_linux.sh  build_windows.bat  build_windows.ps1  stream_ffplay.sh
src/: algorithms.cpp  algorithms.hpp  audio_io.cpp  audio_io.hpp  main.cpp  ram_audio_engine.cpp  ram_audio_engine.hpp  telemetry.cpp  telemetry.hpp
src/algorithms/: advanced_algorithms.cpp  algorithm_registry.hpp  classic_algorithms.cpp  common.hpp  core_registry.cpp  experimental_algorithms.cpp  musical_algorithms.cpp  texture_algorithms.cpp
tests/: telemetry_test.cpp
